add component comment

--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 :root {
-  // -- significa que é uma variável, cores globais, VIte já suporta a criação de estilização global
+  // -- significa que é uma variável, cores globais, Vite já suporta a criação de estilização global
   --white: #fff;
   --gray-100: #e1e1e6;
   --gray-300: #c4c4cc;
@@ -9,7 +9,13 @@
   --gray-800: #202024;
   --gray-900: #121214;
 
+  --green-300: #00B37E;
   --green-500: #00875f;
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
 }
 
 * {
